--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-    "packageId": "Put_Package_Id_Here",
-    "name": "Name of your package",
+    "packageId": "text-gen-templates",
+    "name": "text-gen Templates",
     "version": "0.0.1",
     "minTextGeneratorVersion": "0.1.0",
-    "description": "The description of the content of this package",
-    "author": "Your name",
-    "tags": "writing, brainstorming",
-    "authorUrl": "Support URL",
-    "repo": "username/repo"
+    "description": "Prompt to be used with the text-generator plugin in Obsidian. Formatted as a template. ",
+    "author": "~germ",
+    "repo": "THEGerm/text-gen-templates"
 }
